# 8.1C-CI-CD

./: .flake8  Jenkinsfile  README.md  app.py  c_extension.c  pyproject.toml  setup.py
tests/: test_app.py
