[project]
name = "8-1c-ci-cd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"flask==1.0.2",
	"itsdangerous>=2.2.0",
	"jinja2>=3.1.6",
	"pip-audit>=2.9.0",
	"pytest>=8.3.5",
	"requests>=2.32.3",
	"werkzeug>=3.1.3",
]

[tool.pytest.ini_options]
pythonpath = [
	"."
]
