[project]
name = "8-1c-ci-cd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"flask==2.0.0",
	"itsdangerous>=2.2.0",
	"pip-audit>=2.9.0",
	"pytest>=8.3.5",
	"requests>=2.32.3",
	"setuptools>=80.7.1",
	"werkzeug>=2,<2.1",
]

[tool.pytest.ini_options]
pythonpath = [
	"."
]
